2007-07-22  Vitaly Alexeev <tishka92@yahoo.com>

	Struggle against memory leak that is become apparent from code like
	myclip.my_var = myclip,
	added misc struct listener()
	* gameswf/gameswf_as_classes/as_key.cpp
	* gameswf/gameswf_as_classes/as_xmlsocket.cpp
	* gameswf/gameswf_button.cpp
	* gameswf/gameswf_character.h
	* gameswf/gameswf_dlist.cpp
	* gameswf/gameswf_environment.h
	* gameswf/gameswf_impl.h
	* gameswf/gameswf_root.cpp
	* gameswf/gameswf_root.h
	* gameswf/gameswf_sprite.cpp
	* gameswf/gameswf_sprite.h
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h
	* gameswf/gameswf_timers.cpp
	* gameswf/gameswf_video_impl.cpp
	* gameswf/gameswf_video_impl.h
	* gameswf/plugins/lib3ds/gameswf_3ds.cpp
	* gameswf/plugins/lib3ds/gameswf_3ds.h

2007-07-21  Vitaly Alexeev <tishka92@yahoo.com>

	The idea with hash<weak_ptr<..>, ...> has appeared bad. 
	weak_ptr may be updated outside and therefore we'll have lost hash key
	tweak_ptr ==> smart_ptr in listener
	* gameswf/gameswf_root.cpp: reverted
	* gameswf/gameswf_root.h: reverted

2007-07-21  Vitaly Alexeev <tishka92@yahoo.com>

	character* m_parent ==> weak_ptr<character> m_parent
	the parent of character may be dead because of Action Script
	* base/smart_ptr.h
	* gameswf/gameswf_button.cpp
	* gameswf/gameswf_character.cpp
	* gameswf/gameswf_character.h
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_sprite.cpp

2007-07-21  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed some bugs:
	any as_object should have addProperty member,
	broadcastMessage can have parameters,
	properly to pass this_ptr to event handler,
	text fields can serve as container 
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_as_classes/as_broadcaster.cpp
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_object.h
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h

2007-07-19  Vitaly Alexeev <tishka92@yahoo.com>

	Plugin handling
	* gameswf/gameswf.h
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_action.h
	* gameswf/gameswf_object.cpp